--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,12 @@ body {
   padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 0;
-  padding-left: 20px; }
+  padding-left: 50px; }
+  body span {
+    background: green;
+    color: black;
+    padding-left: 10px;
+    padding-right: 10px; }
   body h1 {
     color: #c8c8c8;
     margin-top: 10px;
@@ -29,4 +34,4 @@ body {
     body a:hover {
       color: #c8c8c8; }
   body img {
-    border-radius: 0px; }
+    border-radius: 170px; }
