--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,7 +9,14 @@ body {
   padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 0;
-  padding-left: 20px;
+  padding-left: 50px;
+
+span {
+  background: green;
+  color: $background-color;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
   h1 {
     color: $text-color;
@@ -46,6 +53,6 @@ body {
   }
 
   img {
-    border-radius: 0px;
+    border-radius: 170px;
   }
 }
